--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -74,3 +74,52 @@ jobs:
         with:
             name: artifacts
             path: check-in-papi-app/target/*.jar
+            
+            
+# Steps for executing the deployment against Cloudhub Anypoint Platform
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:    
+    - uses: actions/checkout@v3
+    - uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    - uses: actions/download-artifact@v3
+      with:
+        name: artifacts
+
+    - uses: s4u/maven-settings-action@v2.6.0
+      with:
+        servers: |
+            [{
+                "id": "anypoint-exchange-v3",
+                "username": "${{ secrets.ANYPOINT_USERNAME }}",
+                "password": "${{ secrets.ANYPOINT_PASSWORD }}"
+            },
+            {
+                "id": "releases-ee",
+                "username": "${{ secrets.RELEASES_USERNAME }}",
+                "password": "${{ secrets.RELEASES_PASSWORD }}"
+            },
+            {
+                "id": "cloudhub-deploy",
+                "username": "${{ secrets.ANYPOINT_USERNAME }}",
+                "password": "${{ secrets.ANYPOINT_PASSWORD }}"
+            }]
+    - name: Deploy to CloudHub
+      env:
+        AUTHOR: "Jérôme B."
+      run: |
+        artifactName=$(ls *.jar | head -1)
+        mvn --file check-in-papi-app/pom.xml deploy -DmuleDeploy \
+        -Dap.applicationName="checkin-cicd-jbr1" \
+        -Dap.environment="dev" \
+        -Dap.api.id="18030096" \
+        -Dap.encypt.key=${{ secrets.ENCRYPT_KEY }} \
+        -Dap.clientid=${{ secrets.AP_CLIENTID }} \
+        -Dap.clientsecret=${{ secrets.AP_CLIENTSECRET }}
+  
